2007-09-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Ambience/IAmbience.cs,
	  MonoDevelop.Projects.Ambience/ConversionFlags.cs: Renamed file.
	* MonoDevelop.Projects.Ambience/ITypeNameResolver.cs,
	  MonoDevelop.Projects.Ambience/Ambience.cs,
	  MonoDevelop.Projects.Ambience/NetAmbience.cs, MonoDevelop.Projects.mdp,
	  Makefile.am: Added support for ITypeNameResolver, which allows properly
	  formating type names in different namespace scopes.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Parser/ProjectCodeCompletionDatabase.cs: Use the most
	  recent compilation info to update the parser database, even when it has
	  compilation errors. Code completion may not correctly work if parse
	  information does not have the latest info.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Ambience/IAmbience.cs,
	  MonoDevelop.Projects.Ambience/Ambience.cs: Added new ambience flag to
	  allow use of intrinsic type names.

2007-09-11  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/Project.cs: Add a utility method to Project for
	  adding directories.

2007-09-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: fixed compilation
	  error.

2007-09-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: Added some more
	  error handling code, I hope to track down 82715 with it.

2007-09-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: Added some error
	  handling code to make it easier to track refactoring bugs.

2007-09-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Parser/DefaultParserService.cs: Little change in
	  parser service - it logs now an error instead of generating an
	  exception, when a project database isn't found.

2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 
